# cert-generator

./: Cargo.toml
src/: app_config.rs  app_state.rs  certs.rs  main.rs  server.rs
src/server/: handlers.rs  router.rs
src/server/handlers/: activate_user.rs  login.rs  signup.rs
